js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentFile/lib2/l2.0.kt
inline fun qux() = foo0()
